# itus

./: .gitignore  LICENSE  README.md  setup.cfg
src/itus/: __init__.py  itus.py
