[metadata]
name = itus-grans
version = 0.0.1
author = Sebastian Grans
author_email = sebastian.grans@gmail.com
description = A small tool for getting upcoming departures from public transport stops in Norway.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SebastianGrans/itus
project_urls =
    Bug Tracker = https://github.com/SebastianGrans/itus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    gql
    aiohttp

[options.entry_points]
console_scripts =
    itus = itus.itus:main

[options.packages.find]
where = src
